# studies

black-hat-rust/sha1_cracker/: README.md
black-hat-rust/sha1_cracker/src/: main.rs
black-hat-rust/tricoder/: Cargo.toml
black-hat-rust/tricoder/src/: main.rs  ports.rs  subdomains.rs
black-hat-rust/tricoder_async/: Cargo.toml
black-hat-rust/tricoder_async/src/: error.rs  main.rs  ports.rs  subdomains.rs
ctfp/: Cargo.toml
learn-you-a-haskell/: 1.hs  2-state.hs  2.hs  3.hs  baby.hs  curry.hs  hello  recurs.hs
picat/: append.pi  cp_cons.pi  guide.pi  member.pi
sicp-javascript/: ch1.ts
uiua/: leetcode.ua
