[package]
name = "tricoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
futures = "0.3.27"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.157", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version= "1.26.0", features = ["full", "sync"] }
tokio-stream = "0.1.12"
trust-dns-resolver = "0.22.0"
